flaskapp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-svc
  labels:
    app: flaskapp
spec:
  type: ClusterIP
  ports:
    - port: 8080    
  selector:
    app: flaskapp
    tier: frontend
---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: flaskapp-dep
  labels:
    app: flaskapp
spec:
  selector:
    matchLabels:
      app: flaskapp
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flaskapp
        tier: frontend
    spec:
      containers:
      - image: docker-flask-rest-nginx-uwsgi_flask:latest
        imagePullPolicy: IfNotPresent
        name: flaskapp
        ports:
        - containerPort: 8080
          name: flaskapp
