mypostgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-postgres-svc
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
      nodePort: 30004    
  selector:
    app: postgres
    tier: mypostgres   
---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: my-postgres-dep
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
      tier: mypostgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
        tier: mypostgres
    spec:
      volumes:
      - name: pv-storage-postgres
        persistentVolumeClaim:
          claimName: pv-claim-postgres        
      containers:
      - image: postgres:latest
        name: mypostgres
        ports:
        - containerPort: 5432
          name: mypostgres
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"        
          name: pv-storage-postgres
