flaskapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flaskapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: foo.bar.com  
    http:
      paths:
      - path: /flaskapp
        backend:
          serviceName: flaskapp-svc
          servicePort: 8080
